test/fail/used-exception.mo
module {
    public func foo() : async () {
        var x = try {} catch (exception) {
            throw exception;
        };
        x;
    };
};
